[package]
name = "sync_pools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amms = "0.6.1"
anyhow = "1.0.75"
dotenv = "0.15.0"
ethers = { version = "2.0.10", features = ["abigen", "ws"] }
eyre = "0.6.9"
reqwest = "0.11.22"
tokio = { version = "1.34.0", features = ["full"] }
tracing-subscriber = "0.3.18"
